# fifo_ws

./: .gitignore  README.md  package-lock.json  server.js
src/ppe_detector/: package.xml  setup.cfg  setup.py
src/ppe_detector/launch/: ppe.launch.py  ppe_launch.py
src/ppe_detector/models/yolo11n_model/merged_1/: args.yaml  events.out.tfevents.1767089437.ym-Vivobook.17245.0  results.csv
src/ppe_detector/models/yolo11n_model/merged_2/: args.yaml  events.out.tfevents.1767130340.ym-Vivobook.38939.0  results.csv
src/ppe_detector/models/yolo11n_model/merged_3_missed/: args.yaml  results.csv  (+1 more)
src/ppe_detector/ppe_detector/: camera_open.py  decision_maker.py  pose_detector.py  ppe_detector.py  total_detector.py  yoloworld_test.py
src/thermoeye_driver/: CMakeLists.txt  package.xml
src/thermoeye_driver/src/: centerdegree_pub.cpp
src/web_video_server/: CMakeLists.txt  package.xml
src/web_video_server/include/web_video_server/: multipart_stream.hpp  utils.hpp  web_video_server.hpp
src/web_video_server/src/: multipart_stream.cpp  streamer.cpp  utils.cpp  web_video_server.cpp  web_video_server_node.cpp
src/web_video_server/src/streamers/: h264_streamer.cpp  image_transport_streamer.cpp  jpeg_streamers.cpp  libav_streamer.cpp  png_streamers.cpp  ros_compressed_streamer.cpp  vp8_streamer.cpp
src/yolo_msgs/: CMakeLists.txt  package.xml
src/yolo_msgs/msg/: PPEDetect.msg  PoseDetect.msg
ui/: package.json
ui/fifo-safety/: index.html  package-lock.json  package.json
ui/fifo-safety/src/: App.tsx  index.css
ui/fifo-safety/src/rfid/: rfidHandler.ts
(+20 files in other folders)
